--- a/Task1_Prediction_Using_Supervised_ML.ipynb
+++ b/Task1_Prediction_Using_Supervised_ML.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": " Task1-Prediction Using Supervised ML.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -16,6 +17,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/Nikhilteja4465/GRIPJULY/blob/main/Task1_Prediction_Using_Supervised_ML.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "markdown",
       "metadata": {
@@ -79,7 +90,7 @@
         "from sklearn.linear_model import LinearRegression\n",
         "from sklearn.metrics import mean_absolute_error"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -97,7 +108,7 @@
         "data = pd.read_csv('http://bit.ly/w-data')\n",
         "data.head(10)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -215,7 +226,7 @@
         "# Check if there any null value in the Dataset\n",
         "data.isnull == True"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -258,7 +269,7 @@
         "plt.xlabel('Hours Studied', size=12)\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -301,7 +312,7 @@
         "plt.show()\n",
         "print(data.corr())"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -367,7 +378,7 @@
         "# Spliting the Data in two\n",
         "train_X, val_X, train_y, val_y = train_test_split(X, y, random_state = 0)"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -393,7 +404,7 @@
         "regression.fit(train_X, train_y)\n",
         "print(\"Model Trained\")"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -428,7 +439,7 @@
         "prediction = pd.DataFrame({'Hours': [i[0] for i in val_X], 'Predicted Marks': [k for k in pred_y]})\n",
         "prediction"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -537,7 +548,7 @@
         "compare_scores = pd.DataFrame({'Actual Marks': val_y, 'Predicted Marks': pred_y})\n",
         "compare_scores"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -650,7 +661,7 @@
         "plt.xlabel('Hours Studied', size=12)\n",
         "plt.show()"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -688,7 +699,7 @@
         "# Calculating the accuracy of the model\n",
         "print('Mean absolute error: ',mean_absolute_error(val_y,pred_y))"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -732,7 +743,7 @@
         "answer = regression.predict([hours])\n",
         "print(\"Score = {}\".format(round(answer[0],3)))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
